# vmware_rest_code_generator

./: README.md  commit_modules.sh  refresh_examples.py  refresh_modules.py  requirements.txt  setup.cfg  test-requirements.txt  test_refresh_modules.py  tox.ini
changelogs/fragments/: certifi.yaml
module_utils/: test_vmware_rest.py  vmware_rest.py
output/: README.md  gouttelette.yml
tests/unit/: test_refresh_modules.py
vmware_rest_code_generator/api_specifications/: README.md
vmware_rest_code_generator/api_specifications/7.0.2/: content.json
vmware_rest_code_generator/api_specifications/7.0.3_openapi3/: api.json  appliance.json  cis.json  content.json  contentinternal.json  esx.json  stats.json  vapi.json  vcenter.json
vmware_rest_code_generator/cmd/: content_library_data.py  refresh_examples.py  refresh_ignore_files.py  refresh_modules.py  test_refresh_modules.py
vmware_rest_code_generator/config/: modules.yaml
vmware_rest_code_generator/module_utils/: test_vmware_rest.py  vmware_rest.py
vmware_rest_code_generator/templates/: default_module.j2  header.j2  info_list_and_get_module.j2  info_no_list_module.j2
