[metadata]
name = vmware_rest_code_generator
summary = Set of tools used to prepare the vmware_rest collection
description-file =
    README.md
author = Ansible Cloud team
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = vmware_rest_code_generator
package-data = vmware_rest_code_generator =
    templates/*.j2
data-files =
    vmware_rest_code_generator/api_specifications = api_specifications/*
    vmware_rest_code_generator/config = config/*
    vmware_rest_code_generator/module_utils = module_utils/*

[entry_points]
console_scripts =
    vmware_rest_code_generator_refresh_modules = vmware_rest_code_generator.cmd.refresh_modules:main
    vmware_rest_code_generator_refresh_examples = vmware_rest_code_generator.cmd.refresh_examples:main
